--- a/coding2-main/html/alphabet.html
+++ b/coding2-main/html/alphabet.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> HTML 레퍼런스 북 </title>
-    
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- 구글아이콘 -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header id="header">
         <h1> <a href="#">라인 중학교 1학년 코팅반</a></h1>
@@ -19,30 +22,30 @@
 
     <main id="main">
         <header class="main_header">
-        <h2><em>HTML 레퍼런스 북</em></h2>
+            <h2><em>HTML 레퍼런스 북</em></h2>
         </header>
         <nav class="main_menu">
             <ul>
-               <li class="active"><a href="alphabet.html">알파벳</a></li>
-               <li><a href=" ">기초 문법</a></li>
-               <li><a href=" ">블록구조 인라인구조</a></li>
-               <li><a href=" ">웹표준/ 웹접근성/ 웹호완성</a></li>
-               <li><a href=" ">시맨틱태그</a></li>
-               <li><a href=" ">검색엔진 시스템</a></li>
+                <li class="active"><a href="alphabet.html">알파벳</a></li>
+                <li><a href=" ">기초 문법</a></li>
+                <li><a href=" ">블록구조 인라인구조</a></li>
+                <li><a href=" ">웹표준/ 웹접근성/ 웹호완성</a></li>
+                <li><a href=" ">시맨틱태그</a></li>
+                <li><a href=" ">검색엔진 시스템</a></li>
             </ul>
         </nav>
-        
+
         <div class="main_refer">
             <div class="table">
                 <table>
-                <colgroup>
-                    <col style="width:5%;">
-                    <col>
-                    <col>
-                    <col style="with:5%;">
-                    <col style="with:11%;">
-                    <col style="with:5%;">
-                </colgroup>
+                    <colgroup>
+                        <col style="width:5%;">
+                        <col>
+                        <col>
+                        <col style="with:5%;">
+                        <col style="with:11%;">
+                        <col style="with:5%;">
+                    </colgroup>
                     <thead>
                         <tr>
                             <th>번호</th>
@@ -72,9 +75,9 @@
                         <tr>
                             <td>02</td>
                             <td>&lt;abbr&gt;</td>
-                            <td>&lt;abbr&gt;는준말 또는 머리글자를 나타냅니다. 
-                                선택 속성인 title을 사용하면 준말의 전체 뜻이나 설명을 제공할 수 있습니다. 
-                                title 속성은 전체 설명만을 가져야 하며 다른건 포함할 수 없습니다.    </td>
+                            <td>&lt;abbr&gt;는준말 또는 머리글자를 나타냅니다.
+                                선택 속성인 title을 사용하면 준말의 전체 뜻이나 설명을 제공할 수 있습니다.
+                                title 속성은 전체 설명만을 가져야 하며 다른건 포함할 수 없습니다. </td>
                             <td><a href="#">클릭</a></td>
                             <td></td>
                             <td></td>
@@ -96,7 +99,7 @@
                         <tr>
                             <td>04</td>
                             <td>&lt;address&gt;</td>
-                            <td>&lt;address&gt;태그는  가까운 HTML 요소의 사람, 단체, 조직 등에 대한 연락처 정보를 나타냅니다.</td>
+                            <td>&lt;address&gt;태그는 가까운 HTML 요소의 사람, 단체, 조직 등에 대한 연락처 정보를 나타냅니다.</td>
                             <td><a href="#">클릭</a></td>
                             <td></td>
                             <td></td>
@@ -113,10 +116,10 @@
                             <td>06</td>
                             <td>&lt;area&gt;</td>
                             <td>&lt;area&gt;태그는 이미지의 핫스팟 영역을 정의하고 하이퍼링크 (en-US)를 추가할 수 있습니다.
-                                 &lt;map&gt; 요소 안에서만 사용할 수 있습니다.</td>
+                                &lt;map&gt; 요소 안에서만 사용할 수 있습니다.</td>
                             <td><a href="#">클릭</a></td>
                             <td></td>
-                            <td></td>   
+                            <td></td>
                         </tr>
                         <tr>
                             <td>07</td>
@@ -124,7 +127,7 @@
                             <td>article는 다른 페이지 이동을 설정합니다.</td>
                             <td><a href="#">클릭</a></td>
                             <td></td>
-                            <td></td> 
+                            <td></td>
                         </tr>
                         <tr>
                             <td>08</td>
@@ -132,7 +135,7 @@
                             <td>address는 다른 페이지 이동을 설정합니다.</td>
                             <td><a href="#">클릭</a></td>
                             <td></td>
-                            <td></td> 
+                            <td></td>
                         </tr>
                         <tr>
                             <td>09</td>
@@ -140,7 +143,7 @@
                             <td>applet는 다른 페이지 이동을 설정합니다.</td>
                             <td><a href="#">클릭</a></td>
                             <td></td>
-                            <td></td> 
+                            <td></td>
                         </tr>
                         <tr>
                             <td>10</td>
@@ -148,7 +151,7 @@
                             <td>area는 다른 페이지 이동을 설정합니다.</td>
                             <td><a href="#">클릭</a></td>
                             <td></td>
-                            <td></td> 
+                            <td></td>
                         </tr>
                         <tr>
                             <td>11</td>
@@ -156,7 +159,7 @@
                             <td>article는 다른 페이지 이동을 설정합니다.</td>
                             <td><a href="#">클릭</a></td>
                             <td></td>
-                            <td></td> 
+                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -164,13 +167,14 @@
         </div>
 
     </main>
-   
+
 
     <!-- //header -->
     <footer id="footer">
-        <a href = "mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
+        <a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
     </footer>
     <!-- //footer -->
 
 </body>
+
 </html>
