--- a/coding2-main/javascript/study/operator.html
+++ b/coding2-main/javascript/study/operator.html
@@ -48,6 +48,7 @@
                 <li><a href="function.html">함수</a></li>
                 <li><a href="var.html">지역변수/전역변수</a></li>
                 <li><a href="element.html">요소선택</a></li>
+                <li><a href="study/laytag.html">구조관련요소</a></li>
             </ul>
         </nav>
     </header>
