--- a/coding2-main/javascript/javascript05.html
+++ b/coding2-main/javascript/javascript05.html
@@ -49,6 +49,7 @@
                 <li><a href="study/function.html">함수</a></li>
                 <li><a href="study/var.html">지역변수/전역변수</a></li>
                 <li><a href="study/element.html">요소선택</a></li>
+                <li><a href="study/laytag.html">구조관련요소</a></li>
             </ul>
         </nav>
     </header>
