--- a/coding2-main/javascript/study/basic.html
+++ b/coding2-main/javascript/study/basic.html
@@ -31,13 +31,13 @@
                 <li><a href="../javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="effect">
-                <li><a href="effect/searchEffect.html">검색효과</a></li>
-                <li><a href="effect/quizEffect.html">퀴즈효과</a></li>
-                <li><a href="effect/detaEffect.html">데이터 효과</a></li>
-                <li><a href="effect/mouseEffect01.html">마우스효과</a></li>
-                <li><a href="effect/sliderEffect01.html">슬라이스효과</a></li>
-                <li><a href="effect/parallaxEffect01.html">패렐랙스효과</a></li>
-                <li><a href="effect/gameEffect01.html">게임효과</a></li>
+                <li><a href="../effect/searchEffect.html">검색효과</a></li>
+                <li><a href="../effect/quizEffect.html">퀴즈효과</a></li>
+                <li><a href="../effect/detaEffect.html">데이터 효과</a></li>
+                <li><a href="../effect/mouseEffect01.html">마우스효과</a></li>
+                <li><a href="../effect/sliderEffect01.html">슬라이스효과</a></li>
+                <li><a href="../effect/parallaxEffect01.html">패렐랙스효과</a></li>
+                <li><a href="../effect/gameEffect01.html">게임효과</a></li>
             </ul>
             <ul class="study">
                 <li><a href="basic.html">기본 규칙</a></li>
@@ -47,8 +47,73 @@
                 <li><a href="type.html">데이터타입</a></li>
                 <li><a href="function.html">함수</a></li>
                 <li><a href="var.html">지역변수/전역변수</a></li>
-                <li><a href="element.html">요소선택</a></li>
-                <li><a href="study/laytag.html">구조관련요소</a></li>
+                <li><a href="element.html">요소선택자</a></li>
+                <li><a href=".html">join() / push() / pop()</a></li>
+                <li><a href=".html">내장함수</a></li>
+                <li><a href=".html">정규식 표현</a></li>
+                <li><a href=".html">slice() / substring() / substr()</a></li>
+                <li><a href=".html">indexOf() / lastIndexOf</a></li>
+                <li><a href=".html">문자열 결합 / 템플릿 문자열</a></li>
+                <li><a href=".html">소문자/대문자/공백</a></li>
+                <li><a href=".html">split</a></li>
+                <li><a href=".html">replace/replaceAll</a></li>
+                <li><a href=".html">concat</a></li>
+                <li><a href=".html">repeat</a></li>
+                <li><a href=".html">padStart / padEnd</a></li>
+                <li><a href=".html">includes</a></li>
+                <li><a href=".html">함수의 유형</a></li>
+                <li><a href=".html">search</a></li>
+                <li><a href=".html">match</a></li>
+                <li><a href=".html">charAt</a></li>
+                <br>
+                <li><a href=".html">웹접근성,웹표준,웹호환성</a></li>
+                <li><a href=".html">구조관련요소</a></li>
+                <li><a href=".html">블록구조/인라인구조</a>
+                    <br>
+                <li><a href=".html">벡터방식/비트맵방식</a></li>
+                <li><a href=".html">css 기본문법</a></li>
+                <li><a href=".html">미디어쿼리</a></li>
+                <li><a href=".html">강아지 애니메이션</a></li>
+                <li><a href=".html">Scss</a></li>
+                <li><a href=".html">이미지 스프라이트 / IR 효과 / 백그라운드 표현</a></li>
+                <li><a href=".html">CSS 단위</a></li>
+                <li><a href=".html">CSS 색상표현벙법</a></li>
+                <br>
+                <li><a href=".html">레이아웃01</a></li>
+                <li><a href=".html">레이아웃02</a></li>
+                <li><a href=".html">레이아웃03</a></li>
+                <li><a href=".html">레이아웃04</a></li>
+                <li><a href=".html">레이아웃05</a></li>
+                <br>
+                <li><a href=".html">퀴즈01</a></li>
+                <li><a href=".html">퀴즈02</a></li>
+                <li><a href=".html">퀴즈03</a></li>
+                <li><a href=".html">퀴즈04</a></li>
+                <li><a href=".html">퀴즈05</a></li>
+                <li><a href=".html">퀴즈06</a></li>
+                <br>
+                <li><a href=".html">서치01</a></li>
+                <li><a href=".html">서치02</a></li>
+                <li><a href=".html">서치03</a></li>
+                <br>
+                <li><a href=".html">카드유형01</a></li>
+                <li><a href=".html">카드유형02</a></li>
+                <li><a href=".html">카드유형03</a></li>
+                <li><a href=".html">이미지유형01</a></li>
+                <li><a href=".html">이미지유형02</a></li>
+                <li><a href=".html">이미지유형03</a></li>
+                <br>
+                <li><a href=".html">일러스트디자인01</a></li>
+                <li><a href=".html">일러스트디자인02</a></li>
+
+
+
+
+
+
+
+
+
             </ul>
         </nav>
     </header>
