--- a/coding2-main/javascript/study/laytag.html
+++ b/coding2-main/javascript/study/laytag.html
@@ -37,7 +37,7 @@
             width: 100%;
             height: 100px;
             background-color: rgb(95, 207, 119);
-            padding: 45px 20px 30px 20px;
+            padding: 40px 20px 30px 20px;
             display: flex;
             box-sizing: border-box;
 
@@ -50,8 +50,14 @@
             padding-right: 100px;
         }
 
+        #header1 .box {
+            color: #fff;
+        }
 
-        #nav {}
+        #nav {
+            padding-left: 30px;
+            color: #fff;
+        }
 
         #nav ul li {
             width: 100%;
@@ -138,6 +144,14 @@
             box-sizing: border-box;
 
         }
+
+        .table {}
+
+        .document>h2 {
+            color: #000;
+            font-size: 25px;
+            text-align-last: left;
+        }
     </style>
 </head>
 
@@ -183,103 +197,106 @@
         </nav>
     </header>
     <!-- //header -->
+    <main id="main">
 
-    <article class="article">
-        <h2>구조관련요소</h2>
-        <div class="table">
-            <colgroup>
-                <col style="width: 5%">
-                <col style="width: 5%">
-                <col style="width: 37%">
-            </colgroup>
-            <thead>
-                <tr>
-                    <td>요소유형</td>
-                    <td>태그명</td>
-                    <td>태그의 의미 및 특징</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td rowspan="6">블록레벨요소</td>
-                    <td>&lt;header&gt;&lt;/header&gt;</td>
-                    <td>헤더 영역을 의미하는 태그, 제목이나 내비게이션, 검색등의 내용들을 포함<br>
-                        텍스트, 인라인 요소, 블록레벨 요소를 포함, &lt;header&gt;, &lt;footer&gt;태그는 포함할 수 없음</td>
-                </tr>
-                <tr>
-                    <td>&lt;nav&gt;&lt;/nav&gt;</td>
-                    <td>메뉴나 목차등을 정의해 주는 태그<br>
-                        텍스트, 인라인 요소, 블록레벨요소를 포함
-                    </td>
-                </tr>
-                <tr>
-                    <td>&lt;section&gt;&lt;/section&gt;</td>
-                    <td>맥락이 같은 요소들을 주제별로 그룹화 해주는 태그, 섹션 주제에 대한 제목요소 &lt;h2&gt;~&lt;h6&gt;를 포함하는 것이 좋음<br>
-                        텍스트, 인라인요소, 블록레벨 요소 포함</td>
-                </tr>
-                <tr>
-                    <td>&lt;article&gt;&lt;/article&gt;</td>
-                    <td>독립적으로 배포, 재사용 가능한 게시물, 뉴스기사, 블로그 포스팅등을 의미하는 태그, 제목요소 &lt;h2&gt;~&lt;h6&gt;를 포함하는 것이 좋음<br>
-                        텍스트, 인라인요소, 블록 레벨요소를 포함</td>
-                </tr>
-                <tr>
-                    <td>&lt;aside&gt;&lt;/aside&gt;</td>
-                    <td>메인 콘텐츠와 직접적으로 관련이 없는 영역을 의미하는 태그, 오른쪽이나 왼쪽의 사이드 메뉴나 광고등의 영역으로 사용<br>
-                        텍스트, 인라인요소, 블록레벨 요소를 포함</td>
-                </tr>
-                <tr>
-                    <td>&lt;footer&gt;&lt;/footer&gt;</td>
-                    <td>푸터 영역을 의미하는 태그, 섹션 작성자나 저작권에 대한 정보, 관련된 문서의 링크를 포함<br>
-                        텍스트, 인란인요소, 즐록레벨요소를 포함, &lt;header&gt;, &lt;footer&gt;태그는 포함할 수 없음</td>
-                </tr>
-            </tbody>
+        <div class="document">
+            <h2>&lt;구조관련요소&gt;</h2>
+            <table class="t_table">
+                <colgroup>
+                    <col style="width: 5%">
+                    <col style="width: 5%">
+                    <col style="width: 37%">
+                </colgroup>
+                <thead>
+                    <tr>
+                        <td>요소유형</td>
+                        <td>태그명</td>
+                        <td>태그의 의미 및 특징</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td rowspan="6">블록레벨요소</td>
+                        <td>&lt;header&gt;&lt;/header&gt;</td>
+                        <td>헤더 영역을 의미하는 태그, 제목이나 내비게이션, 검색등의 내용들을 포함<br>
+                            텍스트, 인라인 요소, 블록레벨 요소를 포함, &lt;header&gt;, &lt;footer&gt;태그는 포함할 수 없음</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;nav&gt;&lt;/nav&gt;</td>
+                        <td>메뉴나 목차등을 정의해 주는 태그<br>
+                            텍스트, 인라인 요소, 블록레벨요소를 포함
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>&lt;section&gt;&lt;/section&gt;</td>
+                        <td>맥락이 같은 요소들을 주제별로 그룹화 해주는 태그, 섹션 주제에 대한 제목요소 &lt;h2&gt;~&lt;h6&gt;를 포함하는 것이 좋음<br>
+                            텍스트, 인라인요소, 블록레벨 요소 포함</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;article&gt;&lt;/article&gt;</td>
+                        <td>독립적으로 배포, 재사용 가능한 게시물, 뉴스기사, 블로그 포스팅등을 의미하는 태그, 제목요소 &lt;h2&gt;~&lt;h6&gt;를 포함하는 것이 좋음<br>
+                            텍스트, 인라인요소, 블록 레벨요소를 포함</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;aside&gt;&lt;/aside&gt;</td>
+                        <td>메인 콘텐츠와 직접적으로 관련이 없는 영역을 의미하는 태그, 오른쪽이나 왼쪽의 사이드 메뉴나 광고등의 영역으로 사용<br>
+                            텍스트, 인라인요소, 블록레벨 요소를 포함</td>
+                    </tr>
+                    <tr>
+                        <td>&lt;footer&gt;&lt;/footer&gt;</td>
+                        <td>푸터 영역을 의미하는 태그, 섹션 작성자나 저작권에 대한 정보, 관련된 문서의 링크를 포함<br>
+                            텍스트, 인란인요소, 즐록레벨요소를 포함, &lt;header&gt;, &lt;footer&gt;태그는 포함할 수 없음</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-    </article>
-    </div>
+        <br>
+        <br>
+        <div id="wrap">
+            <header id="header1">
+                <h1><a href="#">header 반응형웹</a></h1>
+                <div class="box">nav</div>
+                <nav id="nav">
+                    <ul>
+                        <li><a href="#">menu01</a></li>
+                        <li><a href="#">menu02</a></li>
+                        <li><a href="#">menu03</a></li>
+                        <li><a href="#">menu04</a></li>
+                        <li><a href="#">menu05</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div id="container">
+                <div class="container1">
+                    <section class="section1">
+                        <h2>section 콘텐츠그룹01</h2>
+                    </section>
+                    <section class="section2">
+                        <h2>section 콘텐츠그룹02</h2>
+                    </section>
+                </div>
+                <div class="container2">
+                    <article class="artticle1">
+                        <h2>article 주요기사</h2>
+                    </article>
+                    <aside class="aside">
+                        aside 광고
+                    </aside>
+                </div>
 
-    <div id="wrap">
-        <header id="header1">
-            <h1><a href="#">반응형웹</a></h1>
-            <nav id="nav">
-                <ul>
-                    <li><a href="#">menu01</a></li>
-                    <li><a href="#">menu02</a></li>
-                    <li><a href="#">menu03</a></li>
-                    <li><a href="#">menu04</a></li>
-                    <li><a href="#">menu05</a></li>
-                </ul>
-            </nav>
-        </header>
-        <div id="container">
-            <div class="container1">
-                <section class="section1">
-                    <h2>콘텐츠그룹01</h2>
-                </section>
-                <section class="section2">
-                    <h2>콘텐츠그룹02</h2>
-                </section>
-            </div>
-            <div class="container2">
-                <article class="artticle1">
-                    <h2>주요기사</h2>
-                </article>
-                <aside class="aside">
-                    광고
-                </aside>
             </div>
 
+            <footer id="footer">
+                <div>footer</div>
+                <address>
+                    palepinkday@gmail.com
+                </address>
+                <p>
+                    copyright ⓒ All right revered
+                </p>
+            </footer>
         </div>
-
-        <footer id="footer">
-            <address>
-                palepinkday@gmail.com
-            </address>
-            <p>
-                copyright ⓒ All right revered
-            </p>
-        </footer>
-    </div>
-
+    </main>
 
 </body>
 
