--- a/site/textType/textType01.html
+++ b/site/textType/textType01.html
@@ -52,7 +52,7 @@
             font-size: 18px;
             margin-bottom: 46px;
 
-            /* 두줄효과 */
+            /* 세줄효과 */
             overflow: hidden;
             text-overflow: ellipsis;
             display: -webkit-box;
@@ -102,8 +102,7 @@
                         <img src="img/icon.svg" alt="아이콘">
                         <p class="text03">검색 이펙트</p>
                         <p class="text04">자바스크립트의 기본 메서드를 통해 검색
-                            스크립트를 완성하는 튜토리얼입니다. 메서
-                            드를 통해 쉽게 검색을 만들 수 있습니다.</p>
+                            스크립트를 완성하는 튜토리얼입니다. 메서드를 통해 쉽게 검색을 만들 수 있습니다.</p>
                         <a class="img__btn" href="/">더보기</a>
 
                     </article>
@@ -111,16 +110,14 @@
                         <img src="img/icon.svg" alt="아이콘">
                         <p class="text03">검색 이펙트</p>
                         <p class="text04">자바스크립트의 기본 메서드를 통해 검색
-                            스크립트를 완성하는 튜토리얼입니다. 메서
-                            드를 통해 쉽게 검색을 만들 수 있습니다.</p>
+                            스크립트를 완성하는 튜토리얼입니다. 메서드를 통해 쉽게 검색을 만들 수 있습니다.</p>
                         <a class="img__btn" href="/">더보기</a>
                     </article>
                     <article class="text__box">
                         <img src="img/icon.svg" alt="아이콘">
                         <p class="text03">검색 이펙트</p>
                         <p class="text04">자바스크립트의 기본 메서드를 통해 검색
-                            스크립트를 완성하는 튜토리얼입니다. 메서
-                            드를 통해 쉽게 검색을 만들 수 있습니다.</p>
+                            스크립트를 완성하는 튜토리얼입니다. 메서드를 통해 쉽게 검색을 만들 수 있습니다.</p>
                         <a class="img__btn" href="/">더보기</a>
                     </article>
                 </div>
@@ -129,24 +126,21 @@
                         <img src="img/icon.svg" alt="아이콘">
                         <p class="text03">검색 이펙트</p>
                         <p class="text04">자바스크립트의 기본 메서드를 통해 검색
-                            스크립트를 완성하는 튜토리얼입니다. 메서
-                            드를 통해 쉽게 검색을 만들 수 있습니다.</p>
+                            스크립트를 완성하는 튜토리얼입니다. 메서드를 통해 쉽게 검색을 만들 수 있습니다.</p>
                         <a class="img__btn" href="/">더보기</a>
                     </article>
                     <article class="text__box">
                         <img src="img/icon.svg" alt="아이콘">
                         <p class="text03">검색 이펙트</p>
                         <p class="text04">자바스크립트의 기본 메서드를 통해 검색
-                            스크립트를 완성하는 튜토리얼입니다. 메서
-                            드를 통해 쉽게 검색을 만들 수 있습니다.</p>
+                            스크립트를 완성하는 튜토리얼입니다. 메서드를 통해 쉽게 검색을 만들 수 있습니다.</p>
                         <a class="img__btn" href="/">더보기</a>
                     </article>
                     <article class="text__box">
                         <img src="img/icon.svg" alt="아이콘">
                         <p class="text03">검색 이펙트</p>
                         <p class="text04">자바스크립트의 기본 메서드를 통해 검색
-                            스크립트를 완성하는 튜토리얼입니다. 메서
-                            드를 통해 쉽게 검색을 만들 수 있습니다.</p>
+                            스크립트를 완성하는 튜토리얼입니다. 메서드를 통해 쉽게 검색을 만들 수 있습니다.</p>
                         <a class="img__btn" href="/">더보기</a>
                     </article>
                 </div>
