--- a/javascript/javascript10.html
+++ b/javascript/javascript10.html
@@ -50,35 +50,66 @@
                 <li><a href="study/element.html">요소선택</a></li>
                 <li><a href="study/laytag.html">구조관련요소</a></li>
             </ul>
+            <div class="main_menu">
+                <ul>
+                    <li><a href="#">01. 요소메서드 : 선택자: document.querySelector() : 요소선택자</a></li>
+                    <li><a href="#">02. 요소메서드 : 선택자: document.querySelectorAll() : 모든 요소선택자</a></li>
+                    <li><a href="#">03. 요소메서드 : 선택자: document.getElementById() : 아이디 요소 선택자</a></li>
+                    <li><a href="#">04. 요소메서드 : 선택자: document.getElementByClassName() : 클래스 요소 선택자</a>
+                    <li><a href="#">04. 요소메서드 : 선택자: document.getElementByTagName() : 태그 요소 선택자</a>
+                    </li>
+                    <br>
+                    <li><a href="#">01. 요소메서드 : 텍스트: innnerText() : 요소에 텍스트 설정하기</a></li>
+                    <li><a href="#">02. 요소메서드 : 텍스트: innnerContent() : 요소에 텍스트 설정하기</a></li>
+                    <li><a href="#">03. 요소메서드 : 텍스트: innnerHtml() : 요소에 텍스트(태그인식) 설정하기</a></li>
+                    <li><a href="#">04. 요소메서드 : 텍스트: outerHtml() : 요소에 텍스트(태그인식) 설정하기</a></li>
+                    <br>
+                    <li><a href="#">01. 요소메서드 : 클래스: classList.add() : 클래스 추가하기</a></li>
+                    <li><a href="#">02. 요소메서드 : 클래스: classList.remove() : 클래스 삭제하기</a></li>
+                    <li><a href="#">03. 요소메서드 : 클래스: classList.toggle() : 클래스 추가/삭제하기</a></li>
+                    <li><a href="#">04. 요소메서드 : 클래스: classList.contains() : 클래스 존재 여부 확인하기</a></li>
+                    <br>
+                    <li><a href="#">01. 요소메서드 : 크기 위치:element.clientWidth : 요소의 가로값</a></li>
+                    <li><a href="#">02. 요소메서드 :크기 위치:element.clientHeight: 요소의 높이값</a></li>
+                    <li><a href="#">03. 요소메서드 :크기 위치:element.clientTop :요소의 Y축값</a></li>
+                    <li><a href="#">04. 요소메서드 : 크기 위치:element.clientLeft : 요소의 X축값</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치:element.offWidth : 요소의 가로값</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치:element.offHeight : 요소의 높이값</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치:element.offTop : 요소의 Y축값</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치:element.offLeft :요소의 X축값</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치:element.getBoundingClientRect(): 크기및위치</a></li>
+                    <br>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :window.innerWidth: 브라우저 가로값(스크롤바미포함)</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :window.innerHeight: 브라우저 높이값(스크롤바미포함)</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :window.innerWidth: 브라우저 가로값(스크롤바미포함)</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :window.innerHeight: 브라우저 높이값(스크롤바미포함)</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :window.pageXOffset: 가로 스크롤값(브라우저 기준)</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :window.pageYOffset: 세로 스크롤값(브라우저 기준)</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :window.scrollX(): 가로 스크롤값(브라우저 기준)</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :window.scrollY(): 세로 스크롤값(브라우저 기준)</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :window.scroll(): 스크롤값 설정()</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :window.scrollTo(): 스크롤값 설정()</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :window.scrollBy(): 스크롤값 설정()</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :element.scrollLeft(): 가로 스크롤값()</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :element.scrollTop(): 가로 스크롤값()</a></li>
+                    <li><a href="#">01. 요소메서드 : 크기 위치 :element.scrollIntoView(): 스크롤이동 설정</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <!-- //header -->
 
     <main id="main">
+        <div class="main_sample">
+            <div class="container">
 
-        <div class="main_menu">
-            <ul>
-                <li><a href="#">01. 요소메서드 : 선택자: document.querySelector() : 요소선택자</a></li>
-                <li><a href="#">02. 요소메서드 : 선택자: document.querySelectorAll() : 모든 요소선택자</a></li>
-                <li><a href="#">03. 요소메서드 : 선택자: document.getElementById() : 아이디 요소 선택자</a></li>
-                <li><a href="#">04. 요소메서드 : 선택자: document.getElementByClassName() : 클래스 요소 선택자</a>
-                <li><a href="#">04. 요소메서드 : 선택자: document.getElementByTagName() : 태그 요소 선택자</a>
-                </li>
-                <br>
-                <li><a href="#">01. 요소메서드 : 텍스트: innnerText() : 요소에 텍스트 설정하기</a></li>
-                <li><a href="#">02. 요소메서드 : 텍스트: innnerContent() : 요소에 텍스트 설정하기</a></li>
-                <li><a href="#">03. 요소메서드 : 텍스트: innnerHtml() : 요소에 텍스트(태그인식) 설정하기</a></li>
-                <li><a href="#">04. 요소메서드 : 텍스트: outerHtml() : 요소에 텍스트(태그인식) 설정하기</a></li>
-                <br>
-                <li><a href="#">01. 요소메서드 : 클래스: classList.add() : 클래스 추가하기</a></li>
-                <li><a href="#">02. 요소메서드 : 클래스: classList.remove() : 클래스 삭제하기</a></li>
-                <li><a href="#">03. 요소메서드 : 클래스: classList.toggle() : 클래스 추가/삭제하기</a></li>
-                <li><a href="#">04. 요소메서드 : 클래스: classList.contains() : 클래스 존재 여부 확인하기</a></li>
-            </ul>
+            </div>
+
         </div>
+        <!-- //main_menu -->
 
-        <div class="main_script"></div>
-        <div class="main_desc"></div>
+
+
     </main>
     <!-- //main -->
 
@@ -86,6 +117,58 @@
         <a href="mailto:palepinkday@gmail.com">palepinkday@gmail.com</a>
     </footer>
     <!-- //footer -->
+    <script>
+        const box1 = document.querySelector("#sample01 .sbox");
+
+        document.querySelector("sample01_btn1").addEventListener("click", (e) => {
+            e.preventDefault();
+            document.querySelector("sample01 .sResult").innerHTML = "이 박스 가로값은" + box1.clientWidth + "px(마진/보더불포함)입니다."
+        });
+        document.querySelector("sample01_btn2").addEventListener("click", (e) => {
+            e.preventDefault();
+            document.querySelector("sample01 .sResult").innerHTML = "이 박스  가로값은" + box1.clientHeight + "px(마진/보더불포함)입니다."
+        });
+        document.querySelector("sample01_btn3").addEventListener("click", (e) => {
+            e.preventDefault();
+            document.querySelector("sample01 .sResult").innerHTML = "이 박스  가로값은" + box1.clientTop + "px(마진/보더불포함)입니다."
+        });
+        document.querySelector("sample01_btn4").addEventListener("click", (e) => {
+            e.preventDefault();
+            document.querySelector("sample01 .sResult").innerHTML = "이 박스  가로값은" + box1.clientLeft + "px(마진/보더불포함)입니다."
+        });
+        document.querySelector("sample01_btn5").addEventListener("click", (e) => {
+            e.preventDefault();
+            document.querySelector("sample01 .sResult").innerHTML = "이 박스  가로값은" + box1.clientWidth + "px(마진/보더불포함)입니다."
+        });
+        document.querySelector("sample01_btn6").addEventListener("click", (e) => {
+            e.preventDefault();
+            document.querySelector("sample01 .sResult").innerHTML = "이 박스  가로값은" + box1.clientHeight + "px(마진/보더불포함)입니다."
+        });
+        document.querySelector("sample01_btn7").addEventListener("click", (e) => {
+            e.preventDefault();
+            document.querySelector("sample01 .sResult").innerHTML = "이 박스  가로값은" + box1.clientTop + "px(마진/보더불포함)입니다."
+        });
+        document.querySelector("sample01_btn8").addEventListener("click", (e) => {
+            e.preventDefault();
+            document.querySelector("sample01 .sResult").innerHTML = "이 박스  가로값은" + box1.clientLeft + "px(마진/보더불포함)입니다."
+        });
+        document.querySelector("sample01_btn9").addEventListener("click", (e) => {
+            e.preventDefault();
+            const box = document.querySelector("sample01 .sbox");
+            const result = document.querySelector("sample01 .sResult");
+            const rect = box.getBoundingClientRect();
+
+            result.innerHTML = "";
+
+            for (let key in rect) {
+                if (typeof rect[key] !== "function") {
+                    let span = document.createElement("span");
+                    span.textContent = `${key}: ${rect[key]}`;
+                    result.appendChild(span);
+                }
+            }
+        })
+    </script>
 </body>
 
 </html>
