--- a/javascript/javascript12.html
+++ b/javascript/javascript12.html
@@ -99,57 +99,211 @@
                         <tr>
                             <td>$("")</td>
                             <td>document.querySelector("*")</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td>$("")</td>
                             <td>document.querySelector("*")</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td>$("")</td>
                             <td>document.querySelector("*")</td>
+                            <td></td>
                         <tr>
                             <td>$("")</td>
                             <td>document.querySelector("*")</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td rowspan="9">기본필터선택자</td>
                             <td>$("")</td>
                             <td>document.querySelector("*")</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td>$("")</td>
                             <td>document.querySelector("*")</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td>$("")</td>
                             <td>document.querySelector("*")</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td>$("")</td>
                             <td>document.querySelector("*")</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td>$("")</td>
                             <td>document.querySelector("*")</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td>$("")</td>
                             <td>document.querySelector("*")</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td>$("")</td>
                             <td>document.querySelector("*")</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td>$("")</td>
                             <td>document.querySelector("*")</td>
+                            <td></td>
                         <tr>
                             <td>$("")</td>
                             <td>document.querySelector("*")</td>
+                            <td></td>
+
                         </tr>
 
                     </tbody>
                 </table>
+                <table>
+                    <colgroup>
+                        <col style="width: 5%">
+
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>종류</th>
+                            <th>제이쿼리</th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td rowspan="10">Dimensions</td>
+                            <td>width()</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>height()</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>innerWidth()</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>innerHeight()</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>outerWidth()</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>outerHeight(true)</td>
+                            <td>-</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>$(window).</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+
+                        <tr>
+                            <td>()</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+
+                        <tr>
+                            <td rowspan="5" class="ce">offset</td>
+                            <td>offset().top/offset().left</td>
+                            <td>offsetTop/</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>offset()</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+
+                        <tr>
+                            <td>offsetParent()</td>
+                            <td>offsetParent</td>
+                            <td>요소의 좌표값(부모기준)</td>
+                        </tr>
+                        <tr>
+                            <td>position()</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>scrollLeft()</td>
+                            <td>pageXOffset/window.scroll</td>
+                            <td></td>
+                        </tr>
+
+                        <tr>
+                            <td>scrollTop()</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>scroll()</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table>
+                    <colgroup>
+                        <col style="width: 5%">
+
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th></th>
+                            <th>설정</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td rowspan="5" class="ce">CSS</td>
+                            <td>css()</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+
+                    </tbody>
+                </table>
+
             </div>
 </body>
 
