--- a/site/imgType/imgType01.html
+++ b/site/imgType/imgType01.html
@@ -97,17 +97,15 @@
 
         }
 
-        .image img1 {}
-
         .image.img1 {
-            background: url(img/img01_01.jpg) no-repeat center / cover;
+            background: url(..img/img01_01.jpg) no-repeat center / cover;
             /* background **단축 속성은 색상, 이미지, 원점, 크기, 반복 등 여러 배경 스타일을 한 번에 지정합니다. */
             /* .image img1을 .image.img1로 해줌 주의!!*/
             /* no-repeat : 배경이미지를 반복없이 한 번만 표시합니다. */
         }
 
         .image.img2 {
-            background: url(img/img01_02.jpg) no-repeat center / cover;
+            background: url(..img/img01_02.jpg) no-repeat center / cover;
         }
 
         .img__title {
