--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -98,7 +98,7 @@
             <div class="card__inner container">
                 <article class="card">
                     <figure class="card__header">
-                        <img src="assets/img/card_bg01.jpg" alt="앤디워홀">
+                        <img src="img/card_bg01.jpg" alt="앤디워홀">
                     </figure>
                     <div class="card__body">
                         <h3 class="tit">그는 누구인가?</h3>
@@ -121,7 +121,7 @@
                 </article>
                 <article class="card">
                     <figure class="card__header">
-                        <img src="assets/img/card_bg02.jpg" alt="작품">
+                        <img src="img/card_bg02.jpg" alt="작품">
                     </figure>
                     <div class="card__body">
                         <h3 class="tit">그의 작품 세계와 예술 작품</h3>
@@ -144,7 +144,7 @@
                 </article>
                 <article class="card">
                     <figure class="card__header">
-                        <img src="assets/img/card_bg03.jpg" alt="전시장소">
+                        <img src="img/card_bg03.jpg" alt="전시장소">
                     </figure>
                     <div class="card__body">
                         <h3 class="tit">전시 장소</h3>
