--- a/site/imgType/imgType01.html
+++ b/site/imgType/imgType01.html
@@ -140,7 +140,7 @@
         }
 
         .img__btn.orange {
-            background-color: #FFAB3C;
+            background-color: #c5740a;
         }
     </style>
 </head>
