--- a/javascript/index.html
+++ b/javascript/index.html
@@ -469,10 +469,46 @@
                 display: none;
             }
         }
+
+        .link {
+            position: absolute;
+            right: 30px;
+            top: 30px;
+        }
+
+        .link li {
+            list-style: none;
+            display: inline;
+        }
+
+        .link li a {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            text-align: center;
+            display: inline-block;
+            border: 1px solid #0066ff;
+            background: #0066ff;
+            color: #fff;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 14px;
+            transition: all 0.3s;
+
+        }
+
+        .link li a:hover {}
     </style>
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="https://inthesky1129.tistory.com/"></a>t</li>
+            <li><a href="https://github.com/palepinkday/coding2"></a>g</li>
+            <li><a href="https://github1s.com/palepinkday/coding2"></a>v</li>
+        </ul>
+    </nav>
     <main>
         <div class="dog">
             <div class="wrap">
