--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -62,43 +62,44 @@
 
     <main id="main">
         <section id="sliderType" class="slider__wrap">
-            <h2>슬라이더</h2>
+            <h2>슬라이드</h2>
         </section>
         <!-- //sliderType -->
 
-        <section id="imgType" class="img__wrap nexon section">
+        <section id="imageType" class="image__wrap nexon section">
             <h2>포트폴리오 구경하기</h2>
             <p>국내 현대미술 작가들의 포트폴리오 공간입니다.</p>
             <div class="image__inner container">
                 <article class="image img1">
-                    <h3 class="img__title">포트폴리오 구경하기</h3>
-                    <p class="img__desc">참가한 작가들의 작품수가 기존 전시회 보다는 풍부해 한 자리에서
+                    <h3 class="image__title">포트폴리오 구경하기</h3>
+                    <p class="image__desc">참가한 작가들의 작품수가 기존 전시회 보다는 풍부해 한 자리에서
                         작가의 작품세계에 좀더 다가 설 수 있을 뿐만 아니라, 현대미술의
                         흐름을 한눈에 살펴볼 수 있는 공간입니다.</p>
-                    <a class="img__btn" href="/">자세히 보기</a>
+                    <a class="image__btn" href="/" title="자세히 보기">자세히 보기</a>
                 </article>
                 <article class="image img2">
-                    <h3 class="img__title">포트폴리오 구경하기</h3>
-                    <p class="img__desc">프참가한 작가들의 작품수가 기존 전시회 보다는 풍부해 한 자리에서
+                    <h3 class="image__title">포트폴리오 구경하기</h3>
+                    <p class="image__desc">참가한 작가들의 작품수가 기존 전시회 보다는 풍부해 한 자리에서
                         작가의 작품세계에 좀더 다가 설 수 있을 뿐만 아니라, 현대미술의
-                        흐름을 한눈에 살펴볼 수 있는 공간입니다.</p>
-                    <a class="img__btn orange" href="/">자세히 보기</a>
+                        흐름을 한눈에 살펴볼 수 있는 공간입니다</p>
+                    <a class="image__btn orange" href="/" title="자세히 보기">자세히 보기</a>
                 </article>
             </div>
         </section>
         <!-- //imageType -->
 
-        <section id="imgTextType" class="imgText__wrap">
+        <section id="imgTextType" class="imgText__wrap nexon section gray">
             <h2>이미지텍스트</h2>
         </section>
         <!-- //imgTextType -->
+
         <section id="cardType" class="card__wrap nexon section">
             <h2>앤디 워홀</h2>
             <p>팝아티스트 앤디워홀에 대해 알아보자. </p>
             <div class="card__inner container">
                 <article class="card">
                     <figure class="card__header">
-                        <img src="img/card_bg01.jpg" alt="앤디워홀">
+                        <img src="assets/img/card_bg01.jpg" alt="앤디워홀">
                     </figure>
                     <div class="card__body">
                         <h3 class="tit">그는 누구인가?</h3>
@@ -121,7 +122,7 @@
                 </article>
                 <article class="card">
                     <figure class="card__header">
-                        <img src="img/card_bg02.jpg" alt="작품">
+                        <img src="assets/img/card_bg02.jpg" alt="작품">
                     </figure>
                     <div class="card__body">
                         <h3 class="tit">그의 작품 세계와 예술 작품</h3>
@@ -144,7 +145,7 @@
                 </article>
                 <article class="card">
                     <figure class="card__header">
-                        <img src="img/card_bg03.jpg" alt="전시장소">
+                        <img src="assets/img/card_bg03.jpg" alt="전시장소">
                     </figure>
                     <div class="card__body">
                         <h3 class="tit">전시 장소</h3>
@@ -166,19 +167,69 @@
                     </div>
                 </article>
             </div>
-
         </section>
-
         <!-- //cardType -->
+
         <section id="bannerType" class="banner__wrap">
             <h2>배너</h2>
         </section>
         <!-- //bannerType -->
-        <section id="textType" clas="text__wrap">
-            <h2>텍스트</h2>
+
+        <section id="textType" class="text__wrap nexon section">
+            <span>미술관 나들이</span>
+            <h2>유명한 국내 국외 미술관</h2>
+            <div class="text__inner container">
+                <div class="text__top">
+                    <div class="text t1">
+                        <h3 class="text__title">경기도 미술관 </h3>
+                        <p class="text__desc">경기도의 주요 정치, 사회, 문화 이슈를 주제로
+                            한 <경기 아트 프로젝트전>, 현대미술의 다양
+                                한 형식과 내용을 조명하는 <동시대 현장>, 미</p>
+                        <a class="text_btn" href="/">더보기</a>
+                    </div>
+                    <div class="text t2">
+                        <h3 class="text__title">국립현대미술관</h3>
+                        <p class="text__desc">국립현대미술관은 미술작품 및 자료의 수집·
+                            보존·전시·조사 및 연구와 이에 관한 국제교
+                            류 및 미술활동의 보급을 통한 국민의 미술문</p>
+                        <a class="text_btn" href="/">더보기</a>
+                    </div>
+                    <div class="text t3">
+                        <h3 class="text__title">K현대미술관</h3>
+                        <p class="text__desc">조명이 반짝이는 인더스트리얼풍의 미술관으
+                            로 다양한 현대 예술 전시가 정기적으로 열립
+                            니다.</p>
+                        <a class="text_btn" href="/">더보기</a>
+                    </div>
+                </div>
+                <div class="text__bottom">
+                    <div class="text t4">
+                        <h3 class="text__title">리움미술관</h3>
+                        <p class="text__desc">리움미술관은 서울특별시 용산구 한남동에 위
+                            치한 사립미술관으로 2004년 10월 19일 개
+                            관했다. 삼성그룹의 창립자 이병철의 수집품에</p>
+                        <a class="text_btn" href="/">더보기</a>
+                    </div>
+                    <div class="text t5">
+                        <h3 class="text__title">호암미술관</h3>
+                        <p class="text__desc">호암미술관 은 대한민국 경기도 용인시 처인
+                            구 포곡읍 에버랜드로 562번길 38에 있는 미
+                            술관이다. 삼성그룹의 창업자인 이병철이 수집</p>
+                        <a class="text_btn" href="/">더보기</a>
+                    </div>
+                    <div class="text t6">
+                        <h3 class="text__title">서울시립 남서울미술관</h3>
+                        <p class="text__desc">남서울미술관은 역사의 정취가 가득한, 오래
+                            머물고 싶은 미술관입니다. 미술관이 둥지를
+                            튼 이곳은 대한제국(1897~1910) 시절 벨</p>
+                        <a class="text_btn" href="/">더보기</a>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- //textType -->
     </main>
+
     <footer id="footerType">
         <h2>푸터</h2>
     </footer>
