--- a/javascript/javascript06.html
+++ b/javascript/javascript06.html
@@ -61,13 +61,23 @@
                 <li><a href="#sample01">01. 배열 속성 : length : 배열 길이 구하기 : 반환(숫자)</a></li>
                 <li><a href="#sample02">02. 배열 메서드 : join() : 배열 요소 문자열을 결합 : 반환(문자열) : ★★★</a></li>
                 <li><a href="#sample03">03. 배열 메서드 : push() : 배열 마지막 요소에 추가 : 반환(숫자) : ★★</a></li>
-                <li><a href="#sample03">03. 배열 메서드 : pop() : 배열 마지막 요소를 삭제 : 반환(삭제된 요소) </a></li>
-                <li><a href="#sample">05. 배열 : </a></li>
-                <li><a href="#sample">06. 배열 : </a></li>
-                <li><a href="#sample">07. 배열 : </a></li>
-                <li><a href="#sample">08. 배열 : </a></li>
-                <li><a href="#sample">09. 배열 : </a></li>
-                <li><a href="#sample">10. 배열 : </a></li>
+                <li><a href="#sample04">04. 배열 메서드 : pop() : 배열 마지막 요소를 삭제 : 반환(삭제된 요소) </a></li>
+                <li><a href="#sample05">05. 배열 메서드 : unshift() : 배열 처음 요소에 추가 :반환(숫자) </a></li>
+                <li><a href="#sample06">06. 배열 메서드 : shift() : 배열 처음 요소에 삭제 :반환(삭제된 요소)</a></li>
+                <li><a href="#sample07">07. 배열 메서드 : reverse() : 배열요소의 순서를 반대로 정렬 (배열)</a></li>
+                <li><a href="#sample08">08. 배열 메서드 : sort() : 배열 요소를 정렬할때 : 반환(배열)</a></li>
+                <li><a href="#sample09">09. 배열 메서드 : contact(): 배열 요소를 결합할때 : 반환(배열)</a></li>
+                <li><a href="#sample10">10. 배열 메서드 : reduce(): 배열요소를 하나로 정리: 반환(결과값)</a></li>
+                <li><a href="#sample11">11. 배열 메서드 : reduceRight() : 배열요소를 하나로 정리: 반환(결과값)</a></li>
+
+                <li><a href="#sample11">11. 배열 메서드 : slice() : 배열요소를 하나로 정리: 반환(결과값)</a></li>
+                <li><a href="#sample11">11. 배열 메서드 : splice() : 배열요소를 하나로 정리: 반환(결과값)</a></li>
+                <li><a href="#sample11">11. 배열 메서드 : indexOf() : 배열요소를 하나로 정리: 반환(결과값)</a></li>
+                <li><a href="#sample11">11. 배열 메서드 : lastIndexOf() : 배열요소를 하나로 정리: 반환(결과값)</a></li>
+                <li><a href="#sample11">11. 배열 메서드 : () : 배열요소를 하나로 정리: 반환(결과값)</a></li>
+
+
+
             </ul>
         </div>
         <!-- //main_menu -->
@@ -352,6 +362,19 @@ document.querySelector(".sample03_A2").innerHTML = arrNum2;  //100,200,300,400
             document.querySelector(".sample03_P2").innerHTML = arrPush2; //500
             document.querySelector(".sample03_A2").innerHTML = arrNum2;  //100,200,300,400
         }
+
+
+        //04 
+
+
+
+
+
+
+
+
+
+
     </script>
 
 </html>
