--- a/javascript/effect/mouseEffect.html
+++ b/javascript/effect/mouseEffect.html
@@ -6,6 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>마우스 이펙트</title>
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <style>
+        body {
+            padding: 0;
+            width: 100%;
+            height: 100vh;
+            background: #0f0ff0;
+            color: #FFF;
+        }
+
+        .intro_menu {
+            background: rgba(255, 255, 255, 0.1);
+        }
+
+        .intro_menu ul li {
+            color: #fff;
+        }
+
+        .intro_menu ul li a {
+            color: #fff;
+        }
+    </style>
 </head>
 
 <body>
